Fix overflow

--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@
 
 body {
     margin: 0;
-    /*overflow-x: hidden;*/
+    overflow-x: hidden;
 }
 
 p {
@@ -325,8 +325,6 @@ main li {
 .br-specialArticle {
     position: relative;
     --lines: rgb(255 255 255 / .15);
-
-    overflow: hidden;
     ul {
         list-style-type: '-   ';
     }
